--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<!-- The ReactDOM Library -->
 	<script src="https://unpkg.com/react-dom@15.4.0/dist/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
+    <script src="js/EventEmitter.js"></script>
     <script type="text/babel" src="js/common.js"></script>
   </body>
 </html>
